# Particles

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: CompilerWarnings.cmake  ConanConfig.cmake  Doxygen.cmake  GlobalOptions.cmake  StaticAnalyzers.cmake  Utils.cmake  Vcpkg.cmake  Version.cmake.in  conan.cmake
include/: containers.h  game.h  timestep.h  utils.h  window.h
resources/shaders/: frag.fs  vertex.vs
src/: containers.h  main.cpp
test/: CMakeLists.txt
test/src/: tmp.h  tmp_test.cpp
tools/: build.bat  build2.bat  install.bat  run_tests.bat
